--- a/android/test/app/src/main/res/values/strings.xml
+++ b/android/test/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
-    <string name="app_name">Stopwatch</string>
+    <string name="app_name">Chetbot tests</string>
     <string name="action_settings">Settings</string>
+
+    <string name="stopwatch">Stopwatch</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
     <string name="reset">Reset</string>
     <string name="minutes">MINS</string>
     <string name="seconds">SECS</string>
     <string name="milliseconds">MILLIS</string>
+
+    <string name="text_fields">Text fields</string>
 </resources>
