add in_webview to API

--- a/android/test/app/src/main/res/values/strings.xml
+++ b/android/test/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="alert_deny">Cancel</string>
     <string name="alert_undefined">Undefined</string>
 
+    <string name="web">Web view</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
